<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/desktop_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".InvitationFromDarkNet.activity.DeskActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/loading_margin"
        android:layout_marginRight="@dimen/loading_margin"
        android:layout_marginTop="@dimen/margin_top4"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_top3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_top3"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/talk_icon"
                    android:layout_width="@dimen/margin_top4"
                    android:layout_height="@dimen/margin_top4"
                    android:gravity="center"
                    android:src="@mipmap/talk_icon_s2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/chat_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_top3"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mailbox_icon"
                    android:layout_width="@dimen/margin_top4"
                    android:layout_height="@dimen/margin_top4"
                    android:gravity="center"
                    android:src="@mipmap/mailbox_icon_s2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mail_icon" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_top3"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_top3"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/explorer_icon"
                    android:layout_width="@dimen/margin_top4"
                    android:layout_height="@dimen/margin_top4"
                    android:gravity="center"
                    android:src="@mipmap/explorer_icon_s2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/explorer_icon" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_top3"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/margin_top2"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/doll_yellow"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>